--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
 </head>
 
 <body>
-
-
 <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-<script src="test.js" charset="utf-8"></script>
+<script src="test_02.js" charset="utf-8"></script>
+
  
 </body>
 </html>
